--- a/App.json
+++ b/App.json
@@ -1074,13 +1074,13 @@
     "samples": [
       {
         "name": "AND FLIX",
-        "uri": "http://103.214.202.218:8081/live/andflix-29/playlist.m3u8",
+        "uri": "https://y5w8j4a9.ssl.hwcdn.net/andflixhd/tracks-v1a1/index.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
       },
 	  {
         "name": "AND PRIVE",
-        "uri": "http://103.214.202.218:8081/live/andprive-28/playlist.m3u8",
+        "uri": "https://y5w8j4a9.ssl.hwcdn.net/andprivehd/tracks-v1a1/index.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
       },
