--- a/app2.json
+++ b/app2.json
@@ -9,6 +9,6 @@
 		"language": 1,
 		"isHD": true,
 		"drm_scheme": "widevine",
-		"drm_license_url": "http://1.9.58.113:8063/?deviceId=OTE0ZmFiNmItNmNkYi0zNzZkLWEyYzctMzM0YTc3MWJjZDI4"
+		"drm_license_url": "http://1.9.58.113:8063/?deviceId=OTE0ZmFiNmItNmNkYi0zNzZkLWEyYzctMzM0YTc3MWJjZDI4",
 	}]
 }
