--- a/app2.json
+++ b/app2.json
@@ -1,14 +1,18 @@
-{
-	"code": 200,
-	"message": "Success",
-	"channelMeta": [{
-		"name": "tv1",
-		"icon": "https://upload.wikimedia.org/wikipedia/en/thumb/f/f4/Logo_of_TV1_%28Malaysia%29.svg/1200px-Logo_of_TV1_%28Malaysia%29.svg.png",
-		"link": "https://liveanevia.mncnow.id/live/eds/HBOSignature/sa_dash_vmx/HBOSignature.mpd",
-		"category": 5,
-		"language": 1,
-		"isHD": true,
-		"drm_scheme": "widevine",
-		"drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
-	}]
-}
+[{
+	"name": "DD News",
+	"icon": "mxddnews.jpg",
+	"link": "UCKwucPzHZ7zCUIf7If-Wo1g",
+	"drm_scheme": "",
+	"drm_license_url": "",
+	"us_ag": "",
+	"refe": "",
+	"orig": "",
+	"cook": "",
+	"source": "ytc",
+	"channelLanguageId": 1,
+	"lang": "Hindi",
+	"channelCategoryId": 1,
+	"category": "News",
+	"visibility": "yes",
+	"channel_id": 0
+},
