--- a/app2.json
+++ b/app2.json
@@ -15,4 +15,22 @@
 	"category": "News",
 	"visibility": "yes",
 	"channel_id": 0
-},
+},{
+	"name": "Pratidin Time",
+	"icon": "assamPratidin.jpg",
+	"link": "https://rtmp.smartstream.video/pratidintime/pratidintime/playlist.m3u8",
+	"drm_scheme": "",
+	"drm_license_url": "",
+	"us_ag": "",
+	"refe": "",
+	"orig": "",
+	"cook": "",
+	"source": "dd",
+	"channelLanguageId": 11,
+	"lang": "Assamese",
+	"channelCategoryId": 1,
+	"category": "News",
+	"visibility": "yes",
+	"channel_id": 0
+}, {
+	"name": "Prag News",
