--- a/App.json
+++ b/App.json
@@ -1074,7 +1074,7 @@
     "samples": [
       {
         "name": "AND FLIX",
-        "uri": "http://103.141.66.36/bpk-tv/10304/default/manifest.mpd",
+        "uri": "https://y5w8j4a9.ssl.hwcdn.net/andflixhd/tracks-v1a1/index.m3u8#https://103.141.66.36/bpk-tv/10304/default/manifest.mpd",
         "drm_scheme": "widevine",
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
       },
