--- a/App.json
+++ b/App.json
@@ -543,7 +543,7 @@
       },
       {
         "name": "ALQURAN ALKAREEM",
-        "uri": "https://liveanevia.mncnow.id/live/eds/AlQuranAlKareem/sa_dash_vmx/AlQuranAlKareem.mpd",
+        "uri": "http://m.live.net.sa:1935/live/quran/playlist.m3u8",
         "drm_scheme": "widevine",
         "drm_license_url": "https://mrpw.ptmnc01.verspective.net/?deviceId=ZDBlMjMyZDctMzkxYS0zMjg5LTk3ZmItMmZhZjNjMmVkZDUz"
       },
